[package]
name = "unitycatalog-server"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
unitycatalog-common = { path = "../common", features = ["axum"] }
unitycatalog-sharing-client = { path = "../sharing-client", features = [
  "server",
] }
unitycatalog-client = { path = "../client", optional = true }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
percent-encoding = "2.1"
delta_kernel = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
object_store = { workspace = true }
olai-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = { workspace = true }

axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
datafusion = { version = "53.1.0" }
futures-util = { version = "0.3.28" }
http = { version = "1.2", optional = true }
olai-store = { path = "../../../trestle/crates/olai-store" }
# olai-store = { version = "0" }
tokio = { version = "1.40", features = ["rt-multi-thread"] }
tower = { workspace = true, features = ["make"], optional = true }

# in-memory handler dependencies (in alphabetical order)
dashmap = { version = "6", optional = true }
uuid = { workspace = true, optional = true, features = ["v7"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["axum", "memory", "grpc"]

axum = ["dep:axum", "dep:axum-extra", "http", "tower"]

# in-memory handler features
memory = ["dashmap", "uuid"]

grpc = ["tonic"]

# reusable handler patterns: proxy leaves + UC-client connector
proxy = ["dep:unitycatalog-client"]
federation = ["proxy"]
