[package]
name = "unitycatalog-sharing-client"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
cloud-client = { path = "../cloud-client" }
unitycatalog-common = { path = "../common" }

axum = { workspace = true, optional = true }
chrono = { workspace = true }
delta_kernel = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
pbjson = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[features]
default = []
server = ["axum"]
