[package]
name = "unitycatalog-examples"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true
homepage.workspace = true

[dependencies]
unitycatalog-client = { path = "../../crates/client" }
unitycatalog-common = { path = "../../crates/common" }
unitycatalog-object-store = { path = "../../crates/object-store" }
futures = { workspace = true }
object_store = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = { workspace = true }
