[package]
name = "unitycatalog-client"
version = "0.0.1"
edition = "2024"
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "unitycatalog_client"
crate-type = ["cdylib"]

[dependencies]
cloud-client = { path = "../../crates/cloud-client" }
unitycatalog-common = { path = "../../crates/common", features = [
  "rest-client",
  "python",
] }
delta_kernel = { workspace = true }

chrono = { workspace = true }
futures = { workspace = true }
pyo3 = { workspace = true, features = ["abi3-py310"] }
thiserror = "2"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
