[package]
name = "unitycatalog-client-py"
version = "0.0.1"
edition = "2024"
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "unitycatalog_client"
crate-type = ["cdylib"]

[dependencies]
unitycatalog-client = { path = "../../crates/client" }
unitycatalog-common = { path = "../../crates/common", features = ["python"] }

chrono = { workspace = true }
delta_kernel = { workspace = true }
futures = { workspace = true }
olai-http = { workspace = true }
pyo3 = { workspace = true, features = ["abi3-py39"] }
url = { workspace = true }

thiserror = "2"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
