[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "unitycatalog-client"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
# dependencies = ["pydantic>=2, <3"]

[tool.maturin]
features = ["pyo3/extension-module"]
# python-source = "python"
# module-name = "unitycatalog_client._client"
