[package]
name = "unitycatalog-common"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
unitycatalog-derive = { path = "../derive" }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
delta_kernel = { workspace = true }
itertools = { workspace = true }
object_store = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
tower = { workspace = true, features = ["make"], optional = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

futures-util = { version = "0.3.28" }

[features]
default = ["grpc"]
grpc = ["tonic"]
axum = ["tower"]
