[package]
name = "unitycatalog-common"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
cloud-client = { path = "../cloud-client" }
unitycatalog-derive = { path = "../derive" }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
delta_kernel = { workspace = true }
itertools = { workspace = true }
object_store = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
tower = { workspace = true, features = ["make"], optional = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

futures-util = { version = "0.3.28" }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
  "http2",
  "json",
  "stream",
] }

# convenience for downstream crates that want to use certain types with sqlx
sqlx = { version = "0.8", optional = true, features = [
  "uuid",
  "macros",
  "chrono",
  "json",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["grpc"]
grpc = ["tonic"]
axum = ["tower"]
sqlx = ["dep:sqlx"]
