[package]
name = "unitycatalog-common"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
cloud-client = { path = "../cloud-client" }
unitycatalog-derive = { path = "../derive" }

async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
delta_kernel = { workspace = true }
itertools = { workspace = true }
object_store = { workspace = true }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
tower = { workspace = true, features = ["make"], optional = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

futures-util = { version = "0.3.28" }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
  "http2",
  "json",
  "stream",
] }

# in-memory handler dependencies (in alphabetical order)
dashmap = { version = "6", optional = true }

# rest server dependencies (in alphabetical order)
axum = { version = "0.8", optional = true }

# rest client dependencies (in alphabetical order)
futures = { version = "0.3", optional = true }

# integration test dependencies (in alphabetical order)
http = { version = "1.2", optional = true }
http-body-util = { version = "0.1.0", optional = true }
mime = { version = "0.3", optional = true }

# support kernel executors based on tokio runtime.
tokio = { version = "1.40", optional = true, features = ["rt-multi-thread"] }

# convenience for downstream crates that want to use certain types with sqlx
sqlx = { version = "0.8", optional = true, features = [
  "uuid",
  "macros",
  "chrono",
  "json",
] }

[dev-dependencies]
http-body-util = "0.1.0"
mime = "0.3"
tokio = { version = "1", features = ["full"] }

[features]
default = ["grpc", "memory", "rest-client", "tokio"]
grpc = ["tonic"]
axum = ["tower", "dep:axum", "http"]
sqlx = ["dep:sqlx"]
memory = ["dashmap", "uuid/v7"]
tokio = ["dep:tokio"]

rest-client = ["futures"]

# exposes functionality that help testing cutom handler / router implementations.
integration = ["http-body-util", "mime"]
